@@ -57,12 +57,16 @@ void stunalloc(pointer);
 void setstackmark(struct stackmark *);
 void popstackmark(struct stackmark *);
 void growstackblock(void);
-void grabstackblock(size_t);
 void *growstackstr(void);
 char *makestrspace(size_t, char *);
 char *stnputs(const char *, size_t, char *);
 char *stputs(const char *, char *);
 
+
+static inline void grabstackblock(size_t len)
+{
+	stalloc(len);
+}
 
 static inline char *_STPUTC(int c, char *p) {
 	if (p == sstrend)
